[project]
name = "regbench-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.32.1",
    "pooch>=1.8.2",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

#[[tool.uv.index]]
#url = "https://mirrors2.westlake.edu.cn/pypi/simple"
#default = true