[project]
name = "regbench-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.32",
    "pooch>=1.8",
    "pyyaml>=6.0",
    "tqdm>=4.67",
]

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
url = "https://mirrors.westlake.edu.cn/pypi/simple"
default = true